--- a/mvxport.html
+++ b/mvxport.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>MultiversX token Search</h1>
+    <h1>MultiversX Address Search</h1>
     <form id="searchForm">
         <input type="text" id="addressInput" placeholder="Enter MultiversX address">
         <button type="submit">Search</button>
