--- a/mvxport.html
+++ b/mvxport.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="mvxport.css">
 </head>
 <body>
-    <h1>MultiversX </h1>
+    <h1>MultiversX Address Search</h1>
     <form id="searchForm">
         <input type="text" id="addressInput" placeholder="Enter MultiversX address">
         <button type="submit">Search</button>
