--- a/mvxport.html
+++ b/mvxport.html
@@ -96,6 +96,7 @@
                                     if (balanceInStandardUnit > 0.0001) {
 
                                         var p = document.createElement('p');
+                                        p.className = 'esdt-result';
 
                                         var tokenIdentifier = document.createElement('span');
                                         tokenIdentifier.textContent = 'Token Identifier: ';
