--- a/mvxport.html
+++ b/mvxport.html
@@ -107,7 +107,7 @@
                                         tokenResult.className = 'result';
 
                                         var balance = document.createElement('span');
-                                        balance.textContent = ', Balance: ';
+                                        balance.textContent = 'Balance: ';
                                         balance.className = 'balance';
 
                                         var balanceResult = document.createElement('span');
